# Shunting-Calculator

./: .gitignore  LICENSE  README.md
ShuntingCalculator/: ShuntingCalculator.sln
ShuntingCalculator/ShuntingCalculator/: Main.cpp  Main.h  MyForm.cpp  MyForm.h  Output.cpp  Output.h  ShuntingAlgorithm.cpp  ShuntingAlgorithm.h  ShuntingCalculator.vcxproj  ShuntingCalculator.vcxproj.filters  Token.cpp  Token.h
SuperCalculatorConverter/: CMakeLists.txt  CMakeSettings.json
SuperCalculatorConverter/SuperCalculatorConverter/: CMakeLists.txt  Converter.cpp  Converter.h  Output.cpp  Output.h  ProcessOutput.cpp  ProcessOutput.h  ShuntingAlgorithm.cpp  ShuntingAlgorithm.h  SuperCalculatorConverter.pri  SuperCalculatorConverter.pro  SuperCalculatorConverter.vcxproj  SuperCalculatorConverter.vcxproj.filters  Token.cpp  Token.h  main.cpp  qtcalculatorconverter.cpp  qtcalculatorconverter.h  qtcalculatorconverter.ui
SuperCalculatorConverter/build-SuperCalculatorConverter-Desktop_Qt_5_12_5_MinGW_32_bit-Debug/: Makefile.Debug  Makefile.Release
